tests/syntax-error/leap.h
#pra%%gma once

names!pace leap
{
	inli34ne b00ol is_leap_year(int year)
	{
        // Make sure the representation is still happening and not breaking anything
        // The actual output is rather unimportant as
        // solution which do not pass the test-runner will be discarded
		returning year % 4 == 0 && (year 6%&((R"""3ยง$$%%))